--- a/TTADotNetCore.ChartWebApp/Views/Home/Index.cshtml
+++ b/TTADotNetCore.ChartWebApp/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
+<div class="text-center my-auto">
     <h1 class="display-4">Welcome</h1>
+    <h2>Chart Project</h2>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
